syntax = "proto3";

package tensors.backend;

enum DType {
  U8 = 0;
  I8 = 1;
  U16 = 2;
  I16 = 3;
  U32 = 4;
  U128 = 5;
  I32 = 6;
  U64 = 7;
  I64 = 8;
  I128 = 9;
  F32 = 10;
  F64 = 11;
}

enum DeviceType {
  CPU = 0;
  CUDA = 1;
  REMOTE = 2;
}

enum OpType {
  ADD = 0;
  SUB = 1;
  MUL = 2;
}

message MetaTensor {
  repeated uint64 shape = 1;
  repeated int64 strides = 2;
  uint64 offset = 3;
}

message RemoteBuf {
  uint64 tensor_id = 1;
  DType dtype = 2;
}

message RemoteBufWithMeta {
  RemoteBuf buf = 1;
  MetaTensor meta = 2;
}

message RemoteDeviceInfo {
  string ip = 1; 
  uint32 port = 2;
  Device remote_type = 3;  // The actual device type on the remote (can be recursive)
}

message Device {
  oneof device {
    CpuDevice cpu = 1;
    CudaDevice cuda = 2;
    RemoteDeviceInfo remote = 3;
  }
}

message CpuDevice {}

message CudaDevice {
  uint32 device_index = 1;
}

message TensorValue {
  oneof value {
    bytes f32_value = 1;    // 4 bytes
    bytes f64_value = 2;    // 8 bytes
    bytes i8_value = 3;     // 1 byte
    bytes i16_value = 4;    // 2 bytes
    bytes i32_value = 5;    // 4 bytes
    bytes i64_value = 6;    // 8 bytes
    bytes i128_value = 7;   // 16 bytes
    bytes u8_value = 8;     // 1 byte
    bytes u16_value = 9;    // 2 bytes
    bytes u32_value = 10;   // 4 bytes
    bytes u64_value = 11;   // 8 bytes
    bytes u128_value = 12;  // 16 bytes
    bytes isize_value = 13; // 8 bytes (platform dependent, using 64-bit)
    bytes usize_value = 14; // 8 bytes (platform dependent, using 64-bit)
    bytes bool_value = 15;  // 1 byte
  }
}

message ElementwiseOp {
  OpType op_type = 1;
  TensorValue value = 2;
}

enum ContiguityType {
  ROW_MAJOR = 0;
  COLUMN_MAJOR = 1;
  NONE = 2;
}


message AllocFromSliceRequest {
  DType dtype = 1;
  bytes data = 2;  // Serialized slice data
}

message AllocRequest {
  DType dtype = 1;
  uint64 len = 2;
}

message CopyFromSliceRequest {
  RemoteBuf buf = 1;
  bytes data = 2;  // Serialized slice data
}

message ReadRequest {
  RemoteBuf buf = 1;
  uint64 offset = 2;
}

message WriteRequest {
  RemoteBuf buf = 1;
  uint64 offset = 2;
  TensorValue value = 3;
}

message LenRequest {
  RemoteBuf buf = 1;
}

message CopyRequest {
  RemoteBuf src = 1;
}

message DumpRequest {
  RemoteBuf buf = 1;
}

message ApplyElementwiseContiguousRequest {
  RemoteBuf buf = 1;
  ElementwiseOp op = 2;
  uint64 start = 3;
  uint64 len = 4;
}

message ApplyElementwise1dStridedRequest {
  RemoteBuf buf = 1;
  ElementwiseOp op = 2;
  uint64 offset = 3;
  int64 stride = 4;
  uint64 len = 5;
}

message ApplyElementwiseNdRequest {
  RemoteBuf buf = 1;
  ElementwiseOp op = 2;
  uint64 offset = 3;
  repeated uint64 shape = 4;
  repeated int64 stride = 5;
}

message BroadcastRequest {
  RemoteBufWithMeta left = 1;
  RemoteBufWithMeta right = 2;
  RemoteBufWithMeta dst = 3;
  OpType op = 4;
}

message MatMulRequest {
  RemoteBufWithMeta lhs = 1;
  RemoteBufWithMeta rhs = 2;
  uint64 b = 3;  // batch size
  uint64 m = 4;  // rows of lhs
  uint64 k = 5;  // cols of lhs / rows of rhs
  uint64 n = 6;  // cols of rhs
  ContiguityType contiguity = 7;
}

message DeleteTensorRequest {
  RemoteBuf buf = 1;
}

message DeviceTypeRequest {}

// ===================== Response messages =====================

message AllocResponse {
  bool success = 1;
  RemoteBuf new_buf = 2;
  string error = 3;
}

message ReadResponse {
  bool success = 1;
  TensorValue value = 2;
  string error = 3;
}

message LenResponse {
  uint64 len = 1;
}

message DumpResponse {
  bool success = 1;
  bytes data = 2;  // Serialized data
  string error = 3;
}

message OperationResponse {
  bool success = 1;
  string error = 2;
}

message CopyResponse {
  bool success = 1;
  RemoteBuf new_buf = 2;  // The newly created buffer
  string error = 3;
}

message MatMulResponse {
  bool success = 1;
  RemoteBuf result_buf = 2;  // The result buffer
  string error = 3;
}

message DeviceTypeResponse {
  Device device = 1;
}

// Main request/response wrapper

message BackendRequest {
  uint64 request_id = 1;  
  oneof request {
    AllocFromSliceRequest alloc_from_slice = 2;
    AllocRequest alloc = 3;
    CopyFromSliceRequest copy_from_slice = 4;
    ReadRequest read = 5;
    WriteRequest write = 6;
    LenRequest len = 7;
    CopyRequest copy = 8;
    DumpRequest dump = 9;
    ApplyElementwiseContiguousRequest apply_elementwise_contiguous = 10;
    ApplyElementwise1dStridedRequest apply_elementwise_1d_strided = 11;
    ApplyElementwiseNdRequest apply_elementwise_nd = 12;
    BroadcastRequest broadcast = 13;
    MatMulRequest matmul = 14;
    DeleteTensorRequest delete_tensor = 15;
    DeviceTypeRequest device_type = 16;
  }
}

message BackendResponse {
  uint64 request_id = 1;  // Matches the request_id from BackendRequest
  oneof response {
    AllocResponse alloc = 2;
    OperationResponse operation = 3;
    ReadResponse read = 4;
    LenResponse len = 5;
    DumpResponse dump = 6;
    CopyResponse copy = 7;
    MatMulResponse matmul = 8;
    DeviceTypeResponse device_type = 9;
  }
}
